mcp/0.1/modules/ROOT/pages/mcp-connector-reference.adoc
= MCP Connector 0.1.0-BETA Reference

Anypoint Connector for MCP (MCP Connector) allows Mule applications to act as both MCP servers and clients. This beta version includes support for tools and resources. 

== Configurations

[[Client]]
=== Client

Configuration element that acts as a client and connects to an MCP server.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<Client_SseClient, Sse Client>>
 | The connection types to provide to this configuration. | | x
| Client Name a| String |  Name the client uses to identify itself during the protocol initialization phase. This isn't the same as the name given to this config element (which is later referenced through config-ref parameters). This name doesn't need to be unique. |  | x
| Client Version a| String | Version the client uses to identify itself during the protocol initialization phase. This doesn't need to match the connector or Mule application version. |  | x
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
|===

==== Connection Types

[[Client_SseClient]]
===== SSE Client

The SSE (Server-Sent Events) Client connection type enables MCP Connector to establish a persistent, one-way (server-sent) connection to an MCP server using the SSE standard. This type of connection allows the MCP server to push real-time updates and messages to the client without the need for the client to constantly poll for new information.

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Server Url a| String | Base URL for the target MCP server. |  | x
| Sse Endpoint Path a| String |  |  `/sse` | 
| Request Timeout a| Number |  Sets the duration to wait for server responses before timing out requests. |  30 | 
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time Unit for the Request Timeout parameter. |  SECONDS | 
| Reconnection Delay a| Number |  Specifies how long to wait before reinitializing the SSE connection when it times out or closes. |  500 | 
| Reconnection Delay Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time Unit for the Reconnection Delay. |  MILLISECONDS | 
| Authentication a| HttpRequestAuthentication |  |  | 
| Tls Context Factory a| <<Tls>> |  |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
|===

== Supported Operations

* <<CallTool>> 
* <<ListResources>> 
* <<ListTools>> 
* <<Ping>> 
* <<ReadResource>> 

[[Server]]
=== Server

Configuration element to act as an MCP server.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<Server_SseServer, Sse Server>>
 | Connection types to provide to this configuration. | | x
| Server Name a| String |  Name this server uses to identify itself during the protocol initialization phase. This isn't the same as the name given to this config element (which is later referenced through config-ref parameters). This name doesn't need to be unique. |  | x
| Server Version a| String | Version this client uses to identify itself during the protocol initialization phase. This doesn't need to match the connector or Mule application version. |  | x
| Name a| String |  ID used to reference this configuration. |  | x 
| Subscribe a| Boolean | Whether to allow clients to subscribe to resource updates. |  true | 
| List Changed a| Boolean | Whether to enable notifications for changes to the tool list.  |  true | 
|===

==== Connection Types

[[Server_SseServer]]
===== SSE Server

Exposes the MCP server using the Server-Sent Events (SSE) transport, as defined in https://spec.modelcontextprotocol.io/specification/2024-11-05/basic/transports/#http-with-sse[HTTP With SSE]. This allows MCP clients to establish persistent, one-way connections to this server to receive real-time updates and messages.

[NOTE]
This connection type works only if Mule is started with the `mule.http.service.implementation=NETTY` system property.

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Listener Config a| String |  Reference to the <http:listener-config> used to expose the SSE and messaging endpoints. |  | x
| Sse Endpoint Path a| String |Endpoint path clients use to initiate the SSE connection.  |  /sse | 
| Messages Path a| String | Path the messaging endpoint request will be sent to. |  /message | 
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
|===

== Supported Operations

* <<AddStaticResource>> 

== Associated Sources

* <<OnNewSessionListener>> 
* <<ResourceListener>> 
* <<ToolListener>> 

== Operations

[[CallTool]]
== Call Tool
`<mcp:call-tool>`

Invokes a tool in a remote MCP server.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Tool Name a| String | Name of the tool to invoke. |  | x
| Arguments a| Object | The tool's input arguments.  |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object |  |  #[null] | 
| Target Variable a| String | Name of the variable that stores the operation's output. |  | 
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field.|  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |<<CallToolResponse>>
| Attributes Type | Any
|===

=== For Configurations

* <<Client>> 

=== Throws

* MCP:CONNECTIVITY 
* MCP:RETRY_EXHAUSTED 


[[ListResources]]
== List Resources
`<mcp:list-resources>`

Lists all the available resources in the remote MCP server.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field.|  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of <<ResourceMetadata>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* MCP:CONNECTIVITY 
* MCP:RETRY_EXHAUSTED 


[[ListTools]]
== List Tools
`<mcp:list-tools>`

Lists all the available tools in the remote MCP server.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of <<ToolMetadata>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* MCP:CONNECTIVITY 
* MCP:RETRY_EXHAUSTED 


[[Ping]]
== Ping
`<mcp:ping>`

Pings the remote server.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String | Name of the variable that stores the operation's output. |  | 
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| Any
|===

=== For Configurations

* <<Client>> 

=== Throws

* MCP:CONNECTIVITY 
* MCP:RETRY_EXHAUSTED 


[[ReadResource]]
== Read Resource
`<mcp:read-resource>`

Reads a resource referenced by its URI.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Uri a| String |  |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object |  |  #[null] | 
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |<<ResourceContent>>
| Attributes Type | Any
|===

=== For Configurations

* <<Client>> 

=== Throws

* MCP:CONNECTIVITY  
* MCP:RETRY_EXHAUSTED 

[[AddStaticResource]]
== Add Static Resource
`<mcp:add-static-resource>`

Dynamically adds a resource by providing its metadata and static content.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Name a| String | Resource name.  |  | x
| Uri a| String |Resource URI.  |  | x
| Description a| String | Resource description. |  | x
| Mime Type a| String | Resource MIME type. |  | x
| Resource Content a| One of:

* <<TextResource>>
* <<BlobResource>> | Resource definition. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===


=== For Configurations

* <<Server>> 

=== Throws

* MCP:CONNECTIVITY 
* MCP:RETRY_EXHAUSTED 


== Sources

[[OnNewSessionListener]]
== On New Session Listener
`<mcp:on-new-session-listener>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  | 
| Reject With Status Code a| Number |  |  | 
| Reject With Message a| String |  |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |<<NewSessionRequest>>
| Attributes Type | Any
|===

=== For Configurations

* <<Server>> 


[[ResourceListener]]
== Resource listener
`<mcp:resource-listener>`

Exposes a resource whose content is generated by the execution of the owning flow. The flow will be executed for every received resources/read request. The user can choose to implement the flow so that the resource content is static or to make it dynamic. For instance, a dynamic resource could be a expenses.csv file, that is actually the result of executing a live DB query. Or a static resource could be a file obtained through Amazon S3 and locally cached using the &lt;ee:cache&gt; component.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Name a| String | Name of the resource. |  | x
| Description a| String | Detailed enough description for an LLM to determine when to read this resource. |  | x
| Uri a| String |  Resource URI. |  | x
| Resource Mime Type a| String |  Resource MIME type. |  | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
| Resource Content a| One of:

* <<TextResource>>
* <<BlobResource>> |Defines the resource content and type. These parameters are evaluated when the flow finishes successfully (when the payload and variables available). |  | x
|===

=== Output

[%autowidth.spread]
|===
|Type |<<ResourceRequest>>
| Attributes Type a| <<RequestAttributes>>
|===

=== For Configurations

* <<Server>> 

[[ToolListener]]
== Tool Listener
`<mcp:tool-listener>`

Exposes a tool whose result is generated by the execution of the owning flow. The flow will be executed for every received tools/call request. When triggered, the flow will be executed with a message whose payload is a Java map holding the input arguments. The tool response is generated when the flow finishes either successfully or with error. In both cases, the response can include several content items of different types. If no error response is defined, then a text content item holding the error's description will be generated automatically.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Name a| String |  The tool's name |  | x
| Description a| String |  A detailed enough description for an LLM to determine when this tool should be called |  | x
| Parameters Schema a| String |  A JSON schema defining an object whose fields will act as the tool's input arguments |  | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
| Responses a| Array of One of:

* <<TextToolResponseContent>>
* <<ImageToolResponseContent>>
* <<TextResourceToolResponseContent>>
* <<BlobResourceToolResponseContent>> | Response items when the flow finishes successfully.  |  | x
| On Error Responses a| Array of One of:

* <<TextToolResponseContent>>
* <<ImageToolResponseContent>>
* <<TextResourceToolResponseContent>>
* <<BlobResourceToolResponseContent>> |Content items when the flow finishes in error.  |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Object
| Attributes Type | <<RequestAttributes>>
|===

=== For Configurations

* <<Server>> 


== Types

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  | 
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  | 
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures a revocation checking mechanism. |  | 
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system. |  | 
| Password a| String | Password used to protect the truststore. |  | 
| Type a| String | Type of store. |  | 
| Algorithm a| String | Encryption algorithm that the truststore uses. |  | 
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  | 
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system. |  | 
| Type a| String | Type of store. |  | 
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  | 
| Key Password a| String | Password used to protect the private key. |  | 
| Password a| String | Password used to protect the keystore. |  | 
| Algorithm a| String | Encryption algorithm that the keystore uses. |  | 
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`

Verify only the last element in the certificate chain.

* `false`

Verify all elements in the certificate chain. |  | 
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`

Check the Certification Revocation List (CRL) for certificate validity.

* `false`

Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  | 
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`

Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`

Don't use the secondary method to check certificate validity. |  | 
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`

Avoid verification failure.

* `false`

Allow the verification to fail. |  | 
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  | 
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  | 
|===

=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  | 
|===

[reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ReconnectForever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[CallToolResponse]]
=== Call Tool Response

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Contents a| Array of <<CallToolResponseContent>> |  |  | x
| Error a| Boolean |  | false | 
|===

[[CallToolResponseContent]]
=== Call Tool Response Content

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Type a| Enumeration, one of:

** text
** image
** resource | Content type.  |  | x
| Text a| String | Content's payload when type is `text`.  |  | 
| Mime Type a| String | Content's MIME type.  |  | 
| Data a| Binary | Content's payload when type is `image`.  |  | 
| Resource a| <<ResourceContent>> |Content's payload when type is `resource`.  |  | 
| Audience a| Array of Enumeration, one of:

** USER
** ASSISTANT | Describes who the intended consumer of this data is. It can include multiple entries to indicate content useful for multiple audiences. |  | 
| Priority a| Number |Describes how important this data is for operating the server. A value of `1` means "most important", which indicates that the data is required. A value of `0` means "least important", which indicates that the data is entirely optional.  |  | 
|===

[[ResourceContent]]
=== Resource Content

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Uri a| String |Resource URI  |  | x
| Mime Type a| String | Resource MIME type. |  | x
| Text a| String |Content of a text resource. Null for BLOB data types.   |  | 
| Blob a| Binary | Content of a BLOB resource. Null for text data types.|  | 
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  | 
| Target a| String |  |  | x
|===

[[ResourceMetadata]]
=== Resource Metadata

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Uri a| String | Resource URI.  |  | x
| Name a| String | Name of the resource. |  | x
| Description a| String | Description of the resource. |  | x
| Mime Type a| String | MIME type of the resource. |  | x
|===

[[RepeatableInMemoryIterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory to allocate to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the Buffer Size Increment value, with an upper limit of the Max In Memory Size value. instances. | 100 | 
| Buffer Size Increment a| Number | Amount by which the buffer size expands if it exceeds its initial size. Setting a value of `0` or lower specifies that the buffer can't expand. | 100 | 
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit.  |  | 
|===

[[RepeatableFileStoreIterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | Maximum number of instances to keep in memory. If more than the maximum is required, content on the disk is buffered. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Objects* field. |  | 
|===

[[ToolMetadata]]
=== Tool Metadata

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | Name of the tool. |  | x
| Description a| String |A detailed enough description for an LLM to determine when to call this tool. |  | x
| Input Schema a| String | JSON Schema describing the tool's input parameters.  |  | x
|===

[[NewSessionRequest]]
=== New Session Request

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Session Id a| String |  |  | x
| Additional Properties a| Object |  |  | x
|===
[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times that a redelivered request can be processed unsuccessfully before returning a REDELIVERY_EXHAUSTED error. |  | 
| Message Digest Algorithm a| String | Secure hashing algorithm to use if the *Use Secure Hash* field is `true`. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload's `hashCode()` returned. |  | 
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | One or more expressions that determine if a message was redelivered. This property can be set only if the *Use Secure Hash* field is `false`. |  | 
| Object Store a| ObjectStore | Configures the object store that stores the redelivery counter for each message. |  | 
|===
[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

Configures how to identify a redelivered message and how to find out when the message was redelivered.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | If `true`, Mule uses a secure hash algorithm to identify a redelivered message. |  | 
| Id Expression a| String | One or more expressions that determine when a message was redelivered. You can set this property only if the *Use Secure Hash* field is `false`. |  | 
|===

[[ResourceRequest]]
=== Resource Request

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Requested Uri a| String |  |  | x
|===

[[RequestAttributes]]
=== Request Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Session Id a| String |  |  | x
| Request Id a| String |  |  | x
| Additional Properties a| Object | Additional values attached to the request as HTTP Headers. |  | x
|===

[[TextToolResponseContent]]
=== Text Tool Response Content

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Text a| String |  |  | x
| Audience a| Array of Enumeration, one of:

** USER
** ASSISTANT | Describes who the intended consumer of this data is. It can include multiple entries to indicate content that's useful for multiple audiences. |  | 
| Priority a| Number | Describes how important this data is for operating the server. A value of `1` means "most important", which indicates that the data is required. A value of `0` means "least important", which indicates that the data is entirely optional. |  | 
|===

[[ImageToolResponseContent]]
=== Image Tool Response Content

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Audience a| Array of Enumeration, one of:

** USER
** ASSISTANT | Describes who the intended consumer of this data is. It can include multiple entries to indicate content useful for multiple audiences. |  | 
| Priority a| Number | Describes how important this data is for operating the server. A value of `1` means "most important", which indicates that the data is required. A value of `0` means "least important", which indicates that the data is entirely optional. |  | 
| Data a| Binary | The raw image content, without Base64 encoding. |  | 
| Mime Type a| String | The image MIME type. |  | 
|===

[[TextResourceToolResponseContent]]
=== Text Resource Tool Response Content

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Audience a| Array of Enumeration, one of:

** USER
** ASSISTANT | Describes who the intended consumer of this data is. It can include multiple entries to indicate content useful for multiple audiences.  |  | 
| Priority a| Number |Describes how important this data is for operating the server. A value of `1` means "most important", which indicates that the data is required. A value of `0` means "least important", which indicates that the data is entirely optional. |  | 
| Uri a| String | Resource URI. |  | 
| Mime Type a| String | The resource MIME type. |  | 
| Text a| String | Resource text. |  | 
|===

[[BlobResourceToolResponseContent]]
=== Blob Resource Tool Response Content

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Audience a| Array of Enumeration, one of:

** USER
** ASSISTANT | Describes who the intended consumer of this data is. It can include multiple entries to indicate content useful for multiple audiences. |  | 
| Priority a| Number | Describes how important this data is for operating the server. A value of `1` means "most important", which indicates that the data is required. A value of `0` means "least important", which indicates that the data is entirely optional. |  | 
| Blob a| Binary |The raw resource content, without Base64 encoding.   |  | x
| Uri a| String | Resource URI. |  | 
| Mime Type a| String | The resource MIME type. |  |
|===

[[TextResource]]
=== Text Resource

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Text a| String | Text content. |  | x
|===

[[BlobResource]]
=== Blob Resource

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Blob a| Binary | The raw resource content, without Base64 encoding.  |  | x
|===

== See Also

* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[Using Studio to Configure a Connector]
* xref:index.adoc[MCP Connector Overview]
* https://help.mulesoft.com[MuleSoft Help Center]